--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "cli-color": "^1.4.0",
     "discord.js": "^11.5.1",
     "discord.js-lavalink": "^2.2.3",
+    "endb": "^0.16.1",
     "ffmpeg-binaries": "^4.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
+    "node-gyp": "^6.0.0",
     "node-opus": "^0.3.2",
     "readme-md-generator": "^0.6.1",
     "sqlite3": "^4.1.0",
